manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82212548" 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82212548"
  template:
    metadata:
      labels:
        app: "82212548" 
    spec:
      containers:
        - name: "82212548" 
          image: cepgstapacr.azurecr.io/82212548
          ports:
          - containerPort: 8080
